# cstat

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  ROADMAP.md  docker-compose.yml  railway.json  start.sh
.github/workflows/: ci.yml
crates/cstat-api/: Cargo.toml
crates/cstat-api/src/: main.rs
crates/cstat-api/src/routes/: archetypes.rs  games.rs  mod.rs  players.rs  predict.rs  teams.rs
crates/cstat-core/: Cargo.toml
crates/cstat-core/src/: compute.rs  db.rs  features.rs  inference.rs  lib.rs  models.rs  queries.rs
crates/cstat-core/src/models/: game.rs  player.rs  team.rs
crates/cstat-ingest/: Cargo.toml
crates/cstat-ingest/src/: cache.rs  campom_parity.rs  client.rs  lib.rs  rate_limiter.rs  torvik.rs
crates/cstat-ingest/src/ingest/: elo.rs  games.rs  mod.rs  players.rs  season.rs  teams.rs  torvik.rs  utils.rs
docs/: campom_2026_baseline.csv  campom_methodology.md  custom_stat_methodology.md  model_performance.md  natstat-api-v4.md  torvik-api-guide.md
migrations/: 001_initial_schema.sql  002_enrich_schema.sql  003_team_game_stats.sql  004_fix_player_season_unique.sql  005_rolling_and_sos.sql  006_pipeline_gaps.sql  007_elo_and_forecasts.sql  008_torvik_player_stats.sql  009_rate_percentiles.sql  010_player_rate_percentiles.sql  011_efg_percentile.sql  012_drop_dead_bpm_columns.sql  013_player_archetypes.sql  014_campom_composites.sql  015_campom_player_sos.sql  016_campom_percentile.sql
scripts/: start.sh  sync_to_prod.sh
training/: archetypes.py  benchmark_natstat.py  db.py  evaluate.py  export_onnx.py  features.py  requirements.txt  train.py
training/eval_history/: eval_20260406_182321.json  eval_20260415_222939.json
training/models/: margin_model.onnx  model_meta.json  win_model.onnx
training/models_experiments/cam_v3/: model_meta.json
training/models_experiments/cam_v3_psos/: model_meta.json
training/models_experiments/raw/: model_meta.json
web/: index.html  package-lock.json  package.json
web/src/: App.tsx  index.css  theme.ts
web/src/api/: client.ts
web/src/components/: Archetype.tsx  Layout.tsx  ShotDiet.tsx  TableHeaders.tsx  TableToolbar.tsx  archetypeColors.ts  campom.ts  pctile.ts  tableSort.ts
web/src/pages/: Archetypes.tsx  PlayerCompare.tsx  PlayerDetail.tsx  Players.tsx  Predict.tsx  Rankings.tsx  TeamDetail.tsx
