[package]
name = "cstat-api"
description = "HTTP API server for cstat"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
cstat-core = { path = "../cstat-core" }
cstat-ingest = { path = "../cstat-ingest" }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
dotenvy = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
