[package]
name = "cstat-core"
description = "Shared types, DB models, and query layer for cstat"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tokio-test = { workspace = true }
